@@ -1,6 +1,7 @@
 Change Log:
 v0.6 - Features & bug fixes
  New Features:
+  - reimplemented is.active in C to speed up operations on large networks with lots of time steps
   - added adjust.activity() function to transform the all of the known activity spell values in a networkDynamic object
   - converted add.edges to add.edges.networkDynamic, add.edge to add.edge.networkDynamic and add.vertices to add.vertices.networkDynamic to more correctly use S3 dispatching
   - changed argument order of add.edges.active and add.vertices.active to avoid S3 warnings and implemented pass-through for additional arguments. 
